working on replication