@@ -1,7 +1,12 @@
 package cis5550.kvs;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 
 /*
  * A class to represent the replication item to be processed
@@ -23,15 +28,14 @@ public class ReplicationItem {
     public int replicate(String worker) {
         try {
             System.out.println("Replicating to " + worker);
-            URL toSendUrl = new URL("http://" + worker + "/data/" + tableName + "/" + rowName + "/" + columnName);
-            HttpURLConnection connection = (HttpURLConnection) toSendUrl.openConnection();
-            connection.setRequestMethod("PUT");
-            connection.setDoOutput(true);
-            connection.getOutputStream().write(dataToReplicate);
-            connection.getOutputStream().flush();
-            connection.getOutputStream().close();
-            connection.connect();
-            return connection.getResponseCode();
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("http://" + worker + "/data/" + tableName + "/" + rowName + "/" + columnName))
+                    .PUT(HttpRequest.BodyPublishers.ofByteArray(dataToReplicate))
+                    .build();
+            HttpResponse<String> response = client.send(request,
+                    HttpResponse.BodyHandlers.ofString());
+            return response.statusCode();
         } catch (Exception e) {
             e.printStackTrace();
             return 500;
